# freertos-cpp-shared-buffer

./: CMakeLists.txt  FreeRTOS-kernel  README.md
inc/: FreeRTOSConfig.h  Sensor.hpp  SensorUtility.hpp  SharedBuffer.hpp
src/: Sensor.cpp  SharedBuffer.cpp  main.cpp
